@@ -65,6 +65,7 @@ typedef struct _SymReg {
     struct _SymReg * nextkey;	/* keys */
     struct _SymReg * reg;	/* key->register for VTREGKEYs */
     struct pcc_sub_t *pcc_sub;  /* PCC subroutine */
+    struct _SymReg * used;	/* used register in invoke */
 } SymReg;
 
 
